Added CRUD operations and navigation links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,9 @@
 <h2>This is Home Page</h2>
+
+<p>
+<%= link_to 'Go to Articles Listing Page', articles_path %>
+</p>
+
+<p>
+<%= link_to 'Go to About Page', about_path %>
+</p>
