--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,31 +1,6 @@
 <h1>Edit Article</h1>
 
-<% if @article.errors.any? %>
-    <h2>The following errors is preventing the article from being saved</h2>
+<%= render 'articles/error' %>
+<%= render 'articles/form' %>
 
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
-
-<% end %>
-
-<%= form_with(model: @article, local: true) do |f| %>
-
-    <p>
-        <%= f.label :title %></br>
-        <%= f.text_field :title %>
-    </p>
-
-    <p>
-        <%= f.label :description %></br>
-        <%= f.text_area :description %>
-    </p>
-
-    <p>
-        <%= f.submit %></br>
-    </p>
-
-
-<% end %>
+<%= link_to 'Back to Articles Listing', articles_path %>
