Added some styling using bootstrap

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,9 +1,21 @@
-<h2>This is Home Page</h2>
+<div id = "page-content">
+    <div class = "container" id = "home-container">
+        <div class="jumbotron text-white">
+            <h1 class="display-4">Alpha Blog</h1></br>
+            <p class="lead">A page for you to create articles and see picture of Raiden Shogun.</p>
+            <hr class="my-4">
+            <p>Never Gonna Give You Up</p>
+            <p>Never Gonna Let You Down</p>
+            <p>Never Gonna Run Around and Desert You</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Sign up</a>
+        </div>
 
-<p>
-<%= link_to 'Go to Articles Listing Page', articles_path %>
-</p>
+        <p>
+            <%= link_to 'Go to Articles Listing Page', articles_path %>
+        </p>
 
-<p>
-<%= link_to 'Go to About Page', about_path %>
-</p>
+        <p>
+            <%= link_to 'Go to About Page', about_path %>
+        </p>
+    </div>
+</div>
