--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,27 +1,32 @@
-<h1>Articles Listing Page</h1>
+<div id = "page-content">
+    <h1 class = "text-center mt-4">Articles List</h1>
 
-<table>
-    <thead>
-        <tr>
-            <th>Title</th>
-            <th>Description</th>
-            <th colspan = '3' >Actions</th>
-        </tr>
-    </thead>
+    <p class = "text-center mt-4">
+        <%= link_to 'Create New Article', new_article_path, class: "btn btn-info" %>
+    </p>
 
-    <tbody>
+    <div class = "container">
         <% @articles.each do |article| %>
-            <tr>
-                <td><%= article.title %></td>
-                <td><%= article.description %></td>
-                <td><%= link_to 'Show', article_path(article.id) %></td>
-                <td><%= link_to 'Edit', edit_article_path(article.id) %></td>
-                <td><%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: "Are You Sure?" }%></td>
-            </tr>
+            <div class = "row justify-content-md-center">
+                <div class = "col-8 mt-4 mb-4">
+                    <div class="card shadow mb-4 bg-white rounded">
+                        <div class="card-header font-italic">
+                            User
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title"><%= link_to article.title, article_path(article) %></h5>
+                            <p class="card-text"><%= truncate(article.description, length: 40) %></p>
+                            <%= link_to 'View', article_path(article.id), class: "btn btn-outline-primary" %> 
+                            <%= link_to 'Edit', edit_article_path(article.id), class: "btn btn-outline-success" %> 
+                            <%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: "Are You Sure?" }, class: "btn btn-outline-danger" %>
+                            </br></br>
+                            <small>Created <%= time_ago_in_words(article.created_at) %> ago, 
+                            edited <%= time_ago_in_words(article.updated_at) %> ago</small>
+                        </div>
+                    </div>
+                </div>
+            </div>
         <% end %>
-    </tbody>
-</table>
+    </div>
 
-<p>
-<%= link_to 'Create New Article', new_article_path %>
-</p>
+</div>
