Added styling using bootstrap 4.6

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,4 @@
-<h1>Edit Article</h1>
 
-<%= render 'articles/error' %>
+<h1 class = "text-center mt-4" >Edit Article</h1>
+
 <%= render 'articles/form' %>
-
-<%= link_to 'Back to Articles Listing', articles_path %>
