--- a/app/views/articles/_error.html.erb
+++ b/app/views/articles/_error.html.erb
@@ -1,10 +1,17 @@
 <% if @article.errors.any? %>
-    <h2>The following errors is preventing the article from being saved</h2>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert">
+        <h2>The following errors is preventing the article from being saved</h2>
 
-    <ul>
-        <% @article.errors.full_messages.each do |msg| %>
-            <li><%= msg %></li>
-        <% end %>
-    </ul>
+        <ul>
+            <% @article.errors.full_messages.each do |msg| %>
+                <li><%= msg %></li>
+            <% end %>
+        </ul>
+
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+        </button>
+
+    </div>
 
 <% end %>
