--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,18 +1,33 @@
-<%= form_with(model: @article, local: true) do |f| %>
+<div class = "container">
+    <div class = "row justify-content-center">
+        <div class = "col-10">
+            <%= render 'articles/error' %>
+            <%= form_with(model: @article, class: "shadow p-3 mb-4 bg-white rounded", local: true) do |f| %>
 
-    <p>
-        <%= f.label :title %></br>
-        <%= f.text_field :title %>
-    </p>
+                <div class = "form-group">
+                    <%= f.label :title, class: "col-form-label" %>
+                    <div>
+                        <%= f.text_field :title, class: "form-control", placeholder: "Enter title of article" %>
+                    </div>
+                </div>
 
-    <p>
-        <%= f.label :description %></br>
-        <%= f.text_area :description %>
-    </p>
+                <div class = "form-group">
+                    <%= f.label :description, class: "col-form-label" %>
+                    <div>
+                        <%= f.text_area :description, class: "form-control", rows: "8", placeholder: "Enter description of article" %>
+                    </div>
+                </div>
 
-    <p>
-        <%= f.submit %></br>
-    </p>
+                <div class = "form-group text-center">
+                    <%= f.submit class: "btn btn-outline-info btn-lg" %></br>
+                </div>
 
 
-<% end %>
+            <% end %>
+
+            <div class = "form-group text-center mb-5">
+                <%= link_to 'Back to Articles Listing', articles_path, class: "btn btn-outline-dark" %>
+            </div>
+        </div>
+    </div>
+</div>
