--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,6 +1,6 @@
-<h1>Create New Article</h1>
+<div id = "page-content">
+    <h1 class = "text-center mt-4" >Create New Article</h1>
 
-<%= render 'articles/error' %>
-<%= render 'articles/form' %>
+    <%= render 'articles/form' %>
 
-<%= link_to 'Back to Articles Listing', articles_path %>
+</div>
