--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
         <div class = "col-8 mt-4 mb-4">
             <div class="card shadow mb-4 bg-white rounded">
                 <div class="card-header font-italic">
-                     User
+                    <%= @article.user.username if @article.user %>
                 </div>
                 <div class="card-body">
                     <div class="card-text"><%= simple_format(@article.description) %></div>
