--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
             <p>Never Gonna Give You Up</p>
             <p>Never Gonna Let You Down</p>
             <p>Never Gonna Run Around and Desert You</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Sign up</a>
+            <%= link_to 'Sign Up', signup_path, class: "btn btn-primary btn-lg" %>
         </div>
 
         <p>
