--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class = "form-group text-center">
-                    <%= f.submit "Sign Up", class: "btn btn-outline-info btn-lg" %></br>
+                    <%= f.submit(@user.new_record? ? "Sign Up" : "Update Profile", class: "btn btn-outline-info btn-lg") %></br>
                 </div>
 
 
