--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -4,7 +4,9 @@
             <div class = "col-8 mt-4 mb-4">
                 <div class="card shadow mb-4 bg-white rounded">
                     <div class="card-header font-italic">
-                        <%= article.user.username if article.user %>
+                        <% if article.user %>
+                            <%= link_to article.user.username, user_path(article.user) %>
+                        <% end %>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title"><%= link_to article.title, article_path(article) %></h5>
