--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -9,6 +9,9 @@
         <li class="nav-item active">
           <%= link_to 'About Us', about_path, class: "nav-link" %>
         </li>
+        <li class="nav-item active">
+          <%= link_to 'Bloggers', users_path, class: "nav-link" %>
+        </li>
         <li class="nav-item active dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-expanded="false">
             Articles
