--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,4 +9,12 @@
 
 <h2 class = "text-center mt-4" >Articles</h2>
 
+<div class="digg_pagination">
+    <%= will_paginate @articles, :container => false %>
+</div>
+
 <%= render 'articles/article' %>
+
+<div class="digg_pagination mb-5">
+    <%= will_paginate @articles, :container => false %>
+</div>
