--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,4 +5,12 @@
     <%= link_to 'Create New Article', new_article_path, class: "btn btn-info" %>
 </p>
 
+<div class="digg_pagination">
+    <%= will_paginate @articles, :container => false %>
+</div>
+
 <%= render 'articles/article' %>
+
+<div class="digg_pagination mb-5">
+    <%= will_paginate @articles, :container => false %>
+</div>
