--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,9 @@
 <h1 class = "text-center mt-4" >Alpha Bloggers</h1>
 
+<div class="digg_pagination">
+    <%= will_paginate @user, :container => false %>
+</div>
+
 <div class = "container">
     <% @user.each do |user| %>
         <div class = "row justify-content-md-center">
@@ -20,4 +24,8 @@
             </div>
         </div>
     <% end %>
+</div>
+
+<div class="digg_pagination mb-5">
+    <%= will_paginate @user, :container => false %>
 </div>
