--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,8 +23,12 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled">Disabled</a>
+        <li class="nav-item active">
+          <%= link_to 'Log In', login_path, class: "nav-link" %>
+        </li>
+
+        <li class="nav-item active">
+          <%= link_to 'Log Out', logout_path, class: "nav-link", method: :delete %>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
