--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,7 +10,7 @@
             <div class = "col-8 mt-4 mb-4">
                 <div class="card text-center shadow mb-4 bg-white rounded">
                     <div class="card-header font-italic">
-                        <%= link_to user.username, users_path(user) %>
+                        <%= link_to user.username, user_path(user) %>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title"><%= link_to gravatar_for(user, size: 150), user %></h5>
