--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,8 +12,10 @@
                         <h5 class="card-title"><%= link_to article.title, article_path(article) %></h5>
                         <p class="card-text"><%= truncate(article.description, length: 40) %></p>
                         <%= link_to 'View', article_path(article.id), class: "btn btn-outline-primary" %> 
-                        <%= link_to 'Edit', edit_article_path(article.id), class: "btn btn-outline-success" %> 
-                        <%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: "Are You Sure?" }, class: "btn btn-outline-danger" %>
+                        <% if logged_in? && article.user == current_user %>
+                            <%= link_to 'Edit', edit_article_path(article.id), class: "btn btn-outline-success" %> 
+                            <%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: "Are You Sure?" }, class: "btn btn-outline-danger" %>
+                        <% end %>
                         </br></br>
                         <small>Created <%= time_ago_in_words(article.created_at) %> ago, 
                         edited <%= time_ago_in_words(article.updated_at) %> ago</small>
