--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,8 +11,10 @@
                 </div>
                 <div class="card-body">
                     <div class="card-text"><%= simple_format(@article.description) %></div>
-                    <%= link_to 'Edit', edit_article_path(@article.id), class: "btn btn-outline-success" %> 
-                    <%= link_to 'Delete', article_path(@article.id), method: :delete, data: { confirm: "Are You Sure?" }, class: "btn btn-outline-danger" %>
+                    <% if logged_in? && @article.user == current_user %>
+                        <%= link_to 'Edit', edit_article_path(@article.id), class: "btn btn-outline-success" %> 
+                        <%= link_to 'Delete', article_path(@article.id), method: :delete, data: { confirm: "Are You Sure?" }, class: "btn btn-outline-danger" %>
+                    <% end %>
                     </br></br>
                     <small>Created <%= time_ago_in_words(@article.created_at) %> ago, 
                     edited <%= time_ago_in_words(@article.updated_at) %> ago</small>
