--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -34,6 +34,8 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "View Your Profile", user_path(current_user), class: "dropdown-item" %>
               <%= link_to "Edit Your Profile", edit_user_path(current_user), class: "dropdown-item" %>
+              <div class="dropdown-divider"></div>
+              <%= link_to "Delete Your Profile", user_path(current_user), class: "dropdown-item text-danger", method: :delete, data: { confirm: "Are you sure?" } %>
             </div>
           </li>
 
