--- a/app/views/articles/_article.html.erb
+++ b/app/views/articles/_article.html.erb
@@ -12,7 +12,7 @@
                         <h5 class="card-title"><%= link_to article.title, article_path(article) %></h5>
                         <p class="card-text"><%= truncate(article.description, length: 40) %></p>
                         <%= link_to 'View', article_path(article.id), class: "btn btn-outline-primary" %> 
-                        <% if logged_in? && article.user == current_user %>
+                        <% if logged_in? && (article.user == current_user || current_user.admin?) %>
                             <%= link_to 'Edit', edit_article_path(article.id), class: "btn btn-outline-success" %> 
                             <%= link_to 'Delete', article_path(article.id), method: :delete, data: { confirm: "Are You Sure?" }, class: "btn btn-outline-danger" %>
                         <% end %>
