--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -16,8 +16,14 @@
                         <h5 class="card-title"><%= link_to gravatar_for(user, size: 150), user %></h5>
                         <p class="card-text"><%= pluralize(user.articles.count, "article") %></p>
                         <%= link_to 'View profile', user, class: "btn btn-outline-primary" %>
-                        <% if logged_in? && user == current_user %> 
-                            <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                        <% if logged_in? %>
+                            <% if user == current_user %> 
+                                <%= link_to 'Edit profile', edit_user_path(user), class: "btn btn-outline-info" %>
+                            <% end %>
+                            <% if current_user.admin? %> 
+                                <%= link_to 'Delete profile', user_path(user), class: "btn btn-outline-danger", 
+                                method: :delete, data: {confirm: "Are you sure you want to delete this user's account?"} %>
+                            <% end %>
                         <% end %> 
                         </br></br>
                         <small>Joined <%= time_ago_in_words(user.created_at) %> ago </small>
