--- a/app/views/articles/_error.html.erb
+++ b/app/views/articles/_error.html.erb
@@ -1,6 +1,6 @@
 <% if obj.errors.any? %>
-    <div class="alert alert-warning alert-dismissible fade show" role="alert">
-        <h2>The following errors is preventing the <%= obj.class.name.downcase %> from being saved</h2>
+    <div class="alert alert-warning alert-dismissible fade show" role="alert" >
+        <h2 class = "alert-heading">The following errors is preventing the <%= obj.class.name.downcase %> from being saved</h2>
 
         <ul>
             <% obj.errors.full_messages.each do |msg| %>
