--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,1 +1,19 @@
 <h1 class = "text-center mt-4" >Category: <%= @category.name %></h1>
+
+<div class = "text-center mt-4">
+    <% if logged_in? && current_user.admin? %>
+        <%= link_to "Edit Category Name", edit_category_path(@category), class: "btn btn-outline-success" %>
+    <% end %>
+</div>
+
+<h2 class = "text-center mt-4" >Articles</h2>
+
+<div class="digg_pagination">
+    <%= will_paginate @articles, :container => false %>
+</div>
+
+<%= render 'articles/article' %>
+
+<div class="digg_pagination mb-5">
+    <%= will_paginate @articles, :container => false %>
+</div>
